--- a/src/app/core/tareas/component/tareas/peticiones/dialog-peticion-asignacion.component.html
+++ b/src/app/core/tareas/component/tareas/peticiones/dialog-peticion-asignacion.component.html
@@ -1,4 +1,7 @@
 <div class="dialog-container">
+  <button type="button" class="close-fab" mat-icon-button aria-label="Cerrar" (click)="cerrar()">
+    <mat-icon fontIcon="close"></mat-icon>
+  </button>
   <h1 class="titulo-modal">
     <span class="icon-pill"><mat-icon fontIcon="notifications"></mat-icon></span>
     Petición de asignación
