--- a/src/app/core/tareas/component/valoraciones/dialog-valorar-tarea.html
+++ b/src/app/core/tareas/component/valoraciones/dialog-valorar-tarea.html
@@ -1,4 +1,8 @@
 <div class="dialog-container">
+  <button type="button" class="close-fab" mat-icon-button aria-label="Cerrar" (click)="cerrarDialogo()">
+    <mat-icon fontIcon="close"></mat-icon>
+  </button>
+
   <h1 class="titulo-modal">
     <span class="icon-wrapper">
       <mat-icon>star_rate</mat-icon>
